# zad2-Code2

./: .gitignore  Code2  Makefile  Makefile.am  Makefile.in  README  README.md  code2.c  config.status  configure  configure.ac  libprostopadloscian.la  libtool  prostokat.c  prostokat.h  prostopadloscian.c  prostopadloscian.h  prostopadloscian.lo
.deps/: code2.Po  prostokat.Po  prostopadloscian.Plo  prostopadloscian.Po
.libs/: libprostopadloscian.lai  libprostopadloscian.so.0  libprostopadloscian.so.0.0.0
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3  traces.4
